# psilocybin-microstates

./: .pre-commit-config.yaml  0-main_preprocess_data.py  1-main_gfp_stats_and_ideal_no_mstates.py  1.5-GFP_stats_and_ideal_no_mstates.ipynb  2-main_compute_microstates.py  2.5-microstate-stats.ipynb  3-psychedelic-experience-data.ipynb  4-comparison-me-vs-IngaPovilas.ipynb  5-psychedelic-experience-data_IP.ipynb  Untitled.ipynb  pyproject.toml  requirements.txt
src/: clustering_scores.py  helpers.py  microstates.py  recording.py
